Sistema de .xml SRI integrado solo en consola no archivo